removed unused code

--- a/bin/data/ui/debug.glade
+++ b/bin/data/ui/debug.glade
@@ -193,11 +193,10 @@
             <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
             <child>
-              <object class="GtkStackSwitcher">
+              <object class="GtkStackSwitcher" id="stackswitch">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
-                <property name="stack">stack1</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -245,18 +244,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkStack" id="stack1">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <child>
-              <placeholder/>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">True</property>
-            <property name="fill">True</property>
-            <property name="position">1</property>
-          </packing>
+          <placeholder/>
         </child>
       </object>
     </child>
