--- a/bin/data/ui/debug.glade
+++ b/bin/data/ui/debug.glade
@@ -188,7 +188,7 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
-          <object class="GtkBox">
+          <object class="GtkBox" id="switchbox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
@@ -221,20 +221,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="btnsavegame">
-                <property name="label" translatable="yes">_Save game</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="tooltip_text" translatable="yes">Save current game, with pretty print</property>
-                <property name="use_underline">True</property>
-                <signal name="clicked" handler="Save_Game" swapped="no"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">2</property>
-              </packing>
+              <placeholder/>
             </child>
           </object>
           <packing>
