removed unused code
FossilOrigin-Name: 8877ee316c3ed88dd08f20ecacd204fa535a24f0b4cf26fb12c5c5658b6e5919

--- a/bin/data/ui/debug.glade
+++ b/bin/data/ui/debug.glade
@@ -205,20 +205,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="btnrefresh">
-                <property name="label" translatable="yes">_Refresh</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="tooltip_text" translatable="yes">Refresh all information in menu (ships, bases, items, events, cargo, etc)</property>
-                <property name="use_underline">True</property>
-                <signal name="clicked" handler="Refresh_UI" swapped="no"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">1</property>
-              </packing>
+              <placeholder/>
             </child>
             <child>
               <placeholder/>
