--- a/bin/data/ui/mainmenu.glade
+++ b/bin/data/ui/mainmenu.glade
@@ -1708,18 +1708,7 @@ Steam Sky is distributed in the hope that it will be useful, but WITHOUT ANY WAR
             <property name="can_focus">False</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="btnclosedialog">
-                <property name="label" translatable="yes">Close</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <signal name="clicked" handler="Main_Quit" swapped="no"/>
-              </object>
-              <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
-              </packing>
+              <placeholder/>
             </child>
           </object>
           <packing>
