removed unused code
FossilOrigin-Name: 0e6a308f5aabba5c249cd00f0248aa946eb1300c509432d2215200ae846facea

--- a/bin/data/ui/mainmenu.glade
+++ b/bin/data/ui/mainmenu.glade
@@ -419,19 +419,6 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkComboBoxText" id="cmbcareer">
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="tooltip_text" translatable="yes">Select your career from a list. Careers have some impact on gameplay (each have bonuses to gaining experience in some fields plus they determine your starting ship and crew). More info about each career can be found after selecting it. You can't change career later.</property>
-                                <signal name="changed" handler="Show_Career_Description" swapped="no"/>
-                                <signal name="set-focus-child" handler="Show_Career_Description" swapped="no"/>
-                              </object>
-                              <packing>
-                                <property name="left_attach">1</property>
-                                <property name="top_attach">5</property>
-                              </packing>
-                            </child>
-                            <child>
                               <object class="GtkComboBoxText" id="cmbfaction">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
@@ -483,6 +470,9 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
                                 <property name="left_attach">0</property>
                                 <property name="top_attach">7</property>
                               </packing>
+                            </child>
+                            <child>
+                              <placeholder/>
                             </child>
                             <child>
                               <placeholder/>
